# fbamtrain

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
benchmarks/: CMakeLists.txt
benchmarks/bench_conv2d/: CMakeLists.txt  bench_conv2d.cpp
benchmarks/bench_matmul/: CMakeLists.txt  bench_matmul.cpp
benchmarks/bench_matmul_mfu/: CMakeLists.txt  bench_matmul_mfu.cpp
benchmarks/bench_mha_attn_fwd/: CMakeLists.txt  bench_mha_attn_fwd.cpp
benchmarks/bench_mha_mfu/: CMakeLists.txt  bench_mha_mfu.cpp
benchmarks/bench_streaming_lstm/: CMakeLists.txt  bench_streaming_lstm.cpp
benchmarks/bench_streaming_lstm_bwd/: CMakeLists.txt  bench_streaming_lstm_bwd.cpp
benchmarks/bench_streaming_lstm_bwd_supplier/: CMakeLists.txt  bench_streaming_lstm_bwd_supplier.cpp
benchmarks/common/: benchmark_utils.h
ccl/: CMakeLists.txt
ccl/cmake/: nccl.cmake
ccl/include/: ccl.h
ccl/src/: ccl_nccl.cpp  ccl_stub.cpp
kernel_gen/: CMakeLists.txt  README.md
kernel_gen/include/: declare_kernel.inc.h
kernel_gen/kernel_gen/: HOW_TO_SETUP.md  autotune_conv2d.sh  autotune_cutlass.sh  autotune_flash_attn.sh  autotune_matmul.sh  compile_act.sh  compile_add.sh  compile_addmm.sh  compile_addmm_gelu.sh  compile_all_kernels.sh  compile_avg_pool1d.sh  compile_avg_pool2d.sh  compile_avg_pool2d_bwd.sh  compile_build_cell_embeds.sh  compile_build_cell_embeds_bwd.sh  compile_cast.sh  compile_contiguous_3d.sh  compile_contiguous_4d.sh  compile_conv2d.sh  compile_conv2d_bwd.sh  compile_cross_entropy.sh  compile_cross_entropy_bwd.sh  compile_device_copy_strided.sh  compile_div.sh  compile_embedding.sh  compile_fill_constant.sh  compile_fill_normal.sh  compile_fill_uniform.sh  compile_fill_zeros.sh  compile_flash_attn.sh  compile_flash_attn_bwd.sh  compile_flash_attn_fa.sh  compile_layer_norm.sh  compile_lstm_cell.sh  compile_lstm_cell_bwd.sh  compile_matmul_gelu_bwd.sh  compile_mean.sh  compile_mul.sh  compile_mul_reduce.sh  compile_optimizer.sh  (+5 more)
kernel_gen/src/: conv2d_bin_kernels_sm100.inc.asm  conv2d_bin_kernels_sm89.inc.asm  conv2d_bin_kernels_sm90.inc.asm  conv2d_bin_kinfo_sm100.inc.asm  conv2d_bin_kinfo_sm89.inc.asm  conv2d_bin_kinfo_sm90.inc.asm  declare_asset.inc.asm  embed_kernels_amd.asm  embed_kernels_nv.asm  generated_conv2d_launch.cu
tensorlib/: CMakeLists.txt
tensorlib/include/: activation.h  allocator.h  attention.h  avg_pool1d.h  avg_pool2d.h  compute_kernel.h  conv2d.h  cpudbg.h  ctx_management.h  device_copy.h  embedding.h  execution_backend.h  execution_plan.h  executor.h  functional.h  gpu_stream.h  gputx.h  handles.h  kernel_cache.h  launch_utils.h  layer_norm.h  linear.h  mean.h  mfu.h  mlp.h  module.h  module_list.h  op_graph.h  rms_norm.h  safe_tensors.h  shape_utils.h  stream_descriptor.h  stream_utils.h  streaming_lstm.h  tensor_stream_iterator.h  tensor_stream_populator.h  tensorlib.h  testing.h  transfer.h  utils.h
tensorlib/src/: allocator.cpp  compute_kernel.cpp  cpudbg.cpp  ctx_management.cpp  device_copy.cpp  execution_backend.cpp  execution_plan.cpp  executor.cpp  functional.cpp  gpu_stream.cpp  gputx.cpp  kernel_cache.cpp  mfu.cpp  module.cpp  op_graph.cpp  safe_tensors.cpp  shape_utils.cpp  streaming_lstm_bwd.cpp  streaming_lstm_fwd.cpp  tensor_stream_iterator.cpp  tensor_stream_populator.cpp  tensorlib.cpp  testing.cpp
tests/: CMakeLists.txt  README.md  generate_reference_tensors.sh  pyproject.toml
tests/common/: test_dtype_utils.h
tests/test_act/: CMakeLists.txt  reference_impl.py  test_act.cpp
tests/test_action_model_streaming_bwd/: CMakeLists.txt  actual_dump.safetensors  actual_dump_triton.safetensors  reference_impl.py  test_action_model_streaming_bwd.cpp
tests/test_action_model_streaming_bwd_supplier/: CMakeLists.txt  reference_impl.py  test_action_model_streaming_bwd_supplier.cpp
tests/test_addmm_gelu_mlp/: CMakeLists.txt  reference_impl.py  test_addmm_gelu_mlp.cpp
tests/test_allocator_large/: CMakeLists.txt  test_allocator_large.cpp
tests/test_attention_block/: CMakeLists.txt  reference_impl.py  test_attention_block.cpp
tests/test_avg_pool1d/: CMakeLists.txt  reference_impl.py  test_avg_pool1d.cpp
tests/test_avg_pool2d/: CMakeLists.txt  reference_impl.py  test_avg_pool2d.cpp
tests/test_avg_pool2d_bwd/: CMakeLists.txt  test_avg_pool2d_bwd.cpp
tests/test_build_cell_embed/: CMakeLists.txt  reference_impl.py  test_build_cell_embed.cpp
tests/test_build_cell_embed_bwd/: CMakeLists.txt  test_build_cell_embed_bwd.cpp
tests/test_cast/: CMakeLists.txt  test_cast.cpp
tests/test_contiguous_fallback/: CMakeLists.txt  test_contiguous_fallback.cpp
tests/test_conv2d/: CMakeLists.txt  reference_impl.py  test_conv2d.cpp
tests/test_conv2d_bwd/: CMakeLists.txt  reference_impl.py  test_conv2d_bwd.cpp
tests/test_conv2d_fp16acc/: CMakeLists.txt  reference_impl.py  test_conv2d_fp16acc.cpp
tests/test_conv2d_wgrad_accumulate/: CMakeLists.txt  test_conv2d_wgrad_accumulate.cpp
tests/test_cross_entropy/: CMakeLists.txt  reference_impl.py  test_cross_entropy.cpp
tests/test_cross_entropy_bwd/: CMakeLists.txt  reference_impl.py  test_cross_entropy_bwd.cpp
tests/test_cross_entropy_lm_head_bwd/: CMakeLists.txt  reference_impl.py  test_cross_entropy_lm_head_bwd.cpp
tests/test_device_copy_strided/: CMakeLists.txt  test_device_copy_strided.cpp
tests/test_div/: CMakeLists.txt  reference_impl.py  test_div.cpp
tests/test_div_add/: CMakeLists.txt  reference_impl.py  test_div_add.cpp
tests/test_embedding/: CMakeLists.txt  reference_impl.py  test_embedding.cpp
tests/test_fill_constant/: CMakeLists.txt  test_fill_constant.cpp
tests/test_fill_zeros/: CMakeLists.txt  test_fill_zeros.cpp
tests/test_frame_head/: CMakeLists.txt  reference_impl.py  test_frame_head.cpp
tests/test_frame_head_bwd/: CMakeLists.txt  reference_impl.py  test_frame_head_bwd.cpp
tests/test_layer_norm/: CMakeLists.txt  reference_impl.py  test_layer_norm.cpp
tests/test_linear_bwd/: CMakeLists.txt  reference_impl.py  test_linear_bwd.cpp
tests/test_lstm_cell_bf16/: CMakeLists.txt  test_lstm_cell_bf16.cpp
toyimpl/: README.md  pyproject.toml
(+281 files in other folders)
