add_subdirectory(test_addmm_gelu_mlp)
add_subdirectory(test_mm_gelu_mlp)
add_subdirectory(test_mha_attn_fwd)
add_subdirectory(test_mha_attn_and_reshape_fwd)
add_subdirectory(test_mha_attn_bwd)
add_subdirectory(test_mha_attn_bwd_core)
add_subdirectory(test_layer_norm)
add_subdirectory(test_rms_norm)
add_subdirectory(test_rms_norm_bwd)
add_subdirectory(test_trailing_broadcast_add)
add_subdirectory(test_act)
add_subdirectory(test_mul)
add_subdirectory(test_div)
add_subdirectory(test_div_add)
add_subdirectory(test_fill_zeros)
add_subdirectory(test_fill_constant)
add_subdirectory(test_avg_pool1d)
add_subdirectory(test_avg_pool2d)
add_subdirectory(test_avg_pool2d_bwd)
add_subdirectory(test_conv2d)
add_subdirectory(test_conv2d_fp16acc)
add_subdirectory(test_conv2d_bwd)
add_subdirectory(test_conv2d_wgrad_accumulate)
add_subdirectory(test_mean)
add_subdirectory(test_mean_bwd)
add_subdirectory(test_linear_bwd)
add_subdirectory(test_mlp_block_bwd)
add_subdirectory(test_reduce_sum)
add_subdirectory(test_cross_entropy)
add_subdirectory(test_cross_entropy_bwd)
add_subdirectory(test_build_cell_embed)
add_subdirectory(test_build_cell_embed_bwd)
add_subdirectory(test_mlp_block)
add_subdirectory(test_embedding)
add_subdirectory(test_attention_block)
add_subdirectory(test_cast)
add_subdirectory(test_frame_head)
add_subdirectory(test_frame_head_bwd)
add_subdirectory(test_streaming_iterator_and_populator)
add_subdirectory(test_matmul_fp32_out)
add_subdirectory(test_matmul_bf16)
add_subdirectory(test_matmul_bf16_out_fp32)
add_subdirectory(test_matmul_fp32_out_transpose)
add_subdirectory(test_matmul_fp32_out_cacc_transpose)
add_subdirectory(test_matmul_transpose)
add_subdirectory(test_matmul_large_shape)
add_subdirectory(test_lstm_fwd_simple)
add_subdirectory(test_lstm_cell_fwd)
add_subdirectory(test_lstm_cell_bf16)
add_subdirectory(test_lstm_fwd_streaming_large)
add_subdirectory(test_lstm_streaming_torch)
add_subdirectory(test_lstm_streaming_ce)
add_subdirectory(test_lstm_streaming_bwd)
add_subdirectory(test_action_model_streaming_bwd)
add_subdirectory(test_action_model_streaming_bwd_supplier)
add_subdirectory(test_cross_entropy_lm_head_bwd)
add_subdirectory(test_allocator_large)
add_subdirectory(test_mfu)
add_subdirectory(test_device_copy_strided)
add_subdirectory(test_contiguous_fallback)
add_subdirectory(test_matmul_accumulate)
add_subdirectory(test_matmul_permutations)
add_subdirectory(test_optimizer_adamw)
add_subdirectory(test_optimizer_muon)
