[project]
name = "toyimpl"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "torch>=2.8.0",
    "pytermstreamxz @ git+https://github.com/PrimeIntellect-ai/pytermstreamxz@main",
    "numpy>=2.3.3",
    "safetensors",
    "packaging",
    "wandb",
    "muon-optimizer @ git+https://github.com/KellerJordan/Muon",
]
